First commit: creat a structure for a to do list

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,12 @@
-.habit .action {
+.container {
+  width: 100%;
+}
+
+.card {
+  float: left;
+  margin: 2em;
+}
+
+.check {
   float: right;
-  cursor: pointer;
 }
