--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,7 @@
-.container {
-  width: 100%;
+body {
+  background-image: url("../images/background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .card {
