--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,10 +2,12 @@ body {
   background-image: url("../images/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .card {
-  float: left;
+  display: inline-block;
   margin: 2em;
 }
 
